# chatbot-fp

./: .gitignore  AGENTS.md  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: chat.py
backend/app/routers/: chat.py
backend/app/services/: chat_service.py
backend/tests/: test_chat.py
frontend/: .env  index.html  package-lock.json
frontend/src/: main.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatWindow.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
frontend/src/views/: Home.ts
infra/: main.bicep  main.bicepparam  main.json
